--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-.DS_Store
 __pycache__/
-.env
+*.py[cod]
+*$py.class
+
+.DS_Store
+
+venv/
+env/
+.venv/
+
+instance/*.db
+
+.vscode/
+
+*.log
+*.pid
+
+*.so
+
+.pytest_cache/
+
+.ipynb_checkpoints/
+
+*.bak
+*.swp
+
+.mypy_cache/
+.coverage
+htmlcov/
