--- a/Projects/Money tracker Webapp/requirements.txt
+++ b/Projects/Money tracker Webapp/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.8
 Flask==3.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+gunicorn==21.2.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
